test/language/spec/syntax/invalid/unterminated_string.topo
// TEST: unterminated string literal
// EXPECT-ERROR: unterminated string literal

std::import("cstdint);
